--- a/style.css
+++ b/style.css
@@ -1,115 +1,155 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
 }
-body{
+
+body {
     background-color: #EAECEF;
 }
-.topnav{
+
+.topnav {
     display: flex;
     justify-content: space-between;
     background-color: #E41827;
     padding: 7px 13%;
-    
-}
-.toplogo{
-    display: flex;
-    margin-top: 10px;
-    
-}
-.logo{
-  
     align-content: center;
-}
-.logo img{
-    width: 12rem;
-    height: 5;
+       
 }
 
-.country{
+.toplogo {
     display: flex;
-    width: auto;
-    padding: 15px 7px;
-    gap: 7px;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
 }
-.country img{
-    width: 10%;
-    height: auto;
+
+.logo img {
+    width: 12rem;
+    height: 35px; 
+}
+
+.Nig img {
+    width: 7rem;
+    height: 3vh;
    
 }
-.country p{
-    color: #fff;
-    font-style: italic;
-}
 
-form{
+.icondrop {
+   
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 20px;
     align-items: center;
-    position: relative;
-}
-.formlogin{
-    display: flex;
+    gap: 5px;
     
 }
-.formlogin input{
-    padding: 12px 2%;
+
+.icon1 {
+    font-size: 25px;
+    color: #fff;
+}
+
+.icon2 {
+    font-size: 15px;
+    color: #fff;
+}
+
+#loginform {
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    margin-left: 100px;
+    margin-bottom: 10px;
+   
+    
+}
+
+.formlogin {
+    display: flex;
+    align-items: center;
+}
+
+.formlogin input {
+    padding: 12px 8px;
     margin-right: 5px;
     width: 14rem;
     background: #B60606;
     outline: none;
     border: none;
     color: #fff;
-} 
-.formlogin input::placeholder{
+    font-family: 'Quicksand', sans-serif;
+}
+
+.formlogin input::placeholder,
+.formlogin2 input::placeholder {
     color: grey;
-    
-} 
-.formlogin label{
-    align-content: center;
+}
+
+.formlogin label {
     color: #fff;
-    font-size: 13px; 
+    font-size: 13px;
     background: #B60606;
-    padding: 7px 2%;
-}   
+    padding: 12px 8px;
    
-.formlogin2{
-    display: flex;
-    
 }
-.formlogin2 input{
-    padding: 12px 2%;
+
+.formlogin2 {
+    display: flex;
+    align-items: center;
+}
+
+.formlogin2 input {
+    padding: 12px 8px;
     width: 10rem;
     background: #B60606;
     outline: none;
     border: none;
     color: #fff;
-
+    font-family: 'Quicksand', sans-serif;
 }
-.formlogin2 .loginlabel{
-    padding: 7px 2%;
-    width: auto;
-    margin-right: 20px;
+
+.formlogin2 .loginlabel {
+    padding: 12px 16px;
     background: #7B0911;
-    outline: none;
-    border: none;
     color: #fff;
+    border: none;
     cursor: pointer;
-
 }
-.btn{
-    width: 10rem;
-    margin-top: 20px;
-    padding: 2px 4px;
+
+.btn {
+    width: 6rem;
+    padding: 12px;
     background: transparent;
     color: #fff;
     border: 1px solid #fff;
     cursor: pointer;
+    font-family: 'Quicksand', sans-serif;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .topnav {
+        flex-direction: column;
+        padding: 10px;
+    }
+    .formlogin input,
+    .formlogin2 input {
+        width: 100%;
+    }
+    .btn {
+        width: 100%;
+        margin-top: 10px;
+    }
+}
+
+.HOT{
+    background-color: #FAC111;
+    color: #000;
+    padding: 5px;
+    font-size: 12px;
 }
 .links .selection{
     display: flex;
@@ -239,9 +279,9 @@ form{
     width: 100%;
     
 }
-section{
+.firstsec{
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
     background: transparent;
     display: flex;
     padding: 7px 12%;
@@ -250,14 +290,16 @@ section{
 .mainbody{
     border: 1px solid #B4B4B4;
     background-color: #FFFFFF;
-    width: 69%;
-    min-height: 60vh;
+    width: 73%;
+    height: 47vh;
+    
 }
 .firsthead{
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 10px;
+    padding: 0 1.5%;
 }
 .Highlight{
     display: flex;
@@ -278,7 +320,7 @@ section{
 .printrefresh{
     display: flex;
     justify-content: space-between;
-    gap: 100px;
+    gap: 30px;
 }
 .print{
     gap: 10px;
@@ -298,6 +340,7 @@ section{
     display: flex;
     position: relative;
     justify-content: space-between;
+    
 }
 .mainlinks2 ul{
     margin-top: 10px;
@@ -306,13 +349,21 @@ section{
     display: flex;
     position: relative;
     justify-content: space-between;
+    padding: 0 7%;
+    font-size: 16px;
+    cursor: pointer;
+    
+}
+.mainlinks2 ul li:hover{
+    border-bottom: 4px solid #0D9737;
     
 }
 .filterbox{
     display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-   
+    justify-content: left;
+    width: 0%;
+    border: 2px solid blue;
+ 
 }
 .countryclub{
     display: flex;
@@ -325,44 +376,192 @@ section{
     position: relative;
     margin-top: 10px;
     margin-bottom: 10px;
+    gap: 7px;
+    padding: 0 1.5%;
+    height: 13vh;
+    width: 100%;
+    
+    
+    
 }
+
 .armenia{
     background-color: #F7F7F7;
     border: 1px solid #B4B4B4;
-    height: 10vh;
+    align-content: center;
+    padding: 5px 1%;
+    cursor: pointer;
+   
 }
-.sweden{
-    background-color: #F7F7F7;
-    border: 1px solid #B4B4B4;
+.armenia h2{
+    font-size: 20px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+   
 }
-.england{
-    background-color: #F7F7F7;
-    border: 1px solid #B4B4B4;
+.armenia:hover{
+    border: 3px solid #0D9737;
 }
-.thailand{
-    background-color: #F7F7F7;
-    border: 1px solid #B4B4B4;
-}
-.t{
-    display: flex;
-    gap: 50px;
-}
-.t1{
-    display: flex;
-    
-}
-.t2{
-    display: flex;
-    gap: 20px;
-} 
 
-.t3{
-    display: flex;
-    gap: 30px;
-    margin-left: 100px;
+/*TABLE*/
+
+.mytable{
+    text-align: left;
+    margin-top: 10px;
 }
-aside{
+table{
+    width: 100%;
+    height: 10vh; 
+}
+
+th{
+
+    border-bottom: 1px solid #B4B4B4;
+    font-weight: lighter;
+    padding: 5px 1%;
+ 
+
+}
+.love{
+    font-size: 20px;
+    font-weight: bold;
+}
+.love1{
+    background-color: #0D9737;
+    border: 1px solid #0D9737;
+    border-radius: 5px 5px 5px 5px;
+    border-right: 2px solid #fff;
+    cursor: pointer;
+}
+.love1:hover{
+    background-color: #32CE62;
+}
+td{
+    padding: 7px 2%;
+}
+
+.gen{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.time p{
+    color:  #B4B4B4;
+}
+
+.icon{
+    display: flex;
+    justify-content: right;
+    width: 70%;
+}
+.icon i{
+    margin-right: 10px;
+    align-content: center;
+    font-weight: bold;
+}
+
+.firstass{
+  
+    width: 25%;
+    height: 50vh;
+    background-color: #353A45;
+}
+.Bet{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;   
+    padding: 10px 15%;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.Bet .Line{
+    color: #fff;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;    
+    border-bottom: 4px solid #32CE62;
+}
+.Bet h3{
+    color: #fff;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;    
+}
+
+.RS{
+    display: flex;
+    gap: 10px;
+    border: 2px solid #ffffff88;
+    width: 38%;
+    height: 3vh;
+    justify-content: center;
+    border-radius: 15px 15px 15px 15px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+.real{
+    border-radius:  15px;
+    background: green;
+    color: #fff;
+    height: 2.5vh;
+    width: 50%;
+    align-content: center;
     
+
+}
+.sim{
+    color: #fff;
     width: 30%;
-    min-height: 60vh;
+}
+.minibox{
+    background-color: #fff;
+    width: 92%;
+    margin-left: 10px;
+    margin-top: 10px;
+    height: 35.5vh;
+    padding: 20px 3%;
+}
+.frm{
+    width: 100%;
+    padding: 13px;
+    margin-top: 10px;
+}
+
+.btnmini{
+    width: 100%;
+    padding: 13px;
+    margin-top: 10px;
+    color: #dcdee5;
+}
+
+.minitext{
+    margin-top: 20px;
+    font-size: 14px;
+    color: #dcdee5;
+}
+
+/*another section*/
+.Another{
+    width: 100%;
+    max-height: 100vh;
+    background: transparent;
+    display: flex;
+    padding: 7px 12%;
+    justify-content: space-between;
+}
+
+.livebet{
+    width: 73%;
+    height: 47vh;
+    background-color: #1B1E25;  
+    border: 1px solid #1B1E25;
+}
+
+
+.Anotherside{
+    width: 25%;
+    height: 50vh;
+    background-color: #353A45;
 }
